[package]
name = "snail"
version = "0.3.0"
description = "Parasitic network manager"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/snail"
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/snail" }

[[bin]]
name = "snaild"
path = "src/bin/snaild.rs"
doc = false
test = false

[[bin]]
name = "snailctl"
path = "src/bin/snailctl.rs"
test = false

[dependencies]
failure = "0.1.1"
hlua-badtouch = "0.4.2"
structopt = "0.2"
colored = "1.6"
dbus = "0.6.1"
log = "0.4"
env_logger = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kuchiki = "0.7"
regex = "1.0"
dhcp4r = "0.1.0"
rand = "0.5.1"
base64 = "0.9"
serde_urlencoded = "0.5.2"
reduce = "0.1.1"
users = "0.7.0"
tempfile = "3.0.2"
url = "1.7"

trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git", features = ["dns-over-https"] }
trust-dns-server = { git = "https://github.com/bluejekyll/trust-dns.git", features = [], default_features=false }
trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git" }
tokio-udp = "0.1.1"
tokio = "0.1.1"
mrsc = "0.3.1"

hyper = "0.12"
http = "0.1.5"
hyper-rustls = "0.13"
rustls = "0.12"
tokio-core = "0.1.17"
futures = "0.1"
ct-logs = "0.3"
webpki = "0.18.1"
webpki-roots = "0.14"

nix = "0.11"
zmq = "0.8.2"
syscallz = "0.6"

[dev-dependencies]
pseudo = "0.1.0"
boxxy = "0.6.0"
