[package]
name = "snail"
version = "0.4.0"
description = "Parasitic network manager"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/snail"
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/snail" }

[[bin]]
name = "snaild"
path = "src/bin/snaild.rs"
doc = false
test = false

[[bin]]
name = "snailctl"
path = "src/bin/snailctl.rs"
test = false

[dependencies]
failure = "0.1.1"
hlua-badtouch = "0.4.2"
structopt = "0.2"
colored = "1.6"
dbus = "0.6.1"
log = "0.4"
env_logger = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kuchiki = "0.7"
regex = "1.0"
dhcp4r = "0.1.0"
rand = "0.5.1"
base64 = "0.9"
serde_urlencoded = "0.5.2"
reduce = "0.1.1"
users = "0.7.0"
tempfile = "3.0.2"
url = "1.7"

trust-dns-resolver = { version = "0.10.0-alpha.1", features = ["dns-over-https"] }
trust-dns-server = { version = "0.15.0-alpha.1", features = [], default_features=false }
trust-dns-proto = { version = "0.5.0-alpha.1" }
trust-dns = { version = "0.15.0-alpha.1", features=["serde-config"] }
tokio-udp = "0.1.1"
tokio = "0.1.1"
mrsc = "0.3.1"

hyper = "0.12"
http = "0.1.5"
hyper-rustls = "0.14"
rustls = "0.13"
tokio-core = "0.1.17"
futures = "0.1"
ct-logs = "0.4"
webpki = "0.18.1"
webpki-roots = "0.15"

nix = "0.11"
zmq = "0.8.2"
syscallz = "0.7"
caps = "0.3"

# vpn
tun-tap = "0.1.1"
snow = "0.3.0"
pktparse = "0.3.0"
byteorder = "1"
nom = "4.0"
cidr = "0.0.4"

[dev-dependencies]
pseudo = "0.1.0"
boxxy = "0.7.0"
