[package]
name = "snail"
version = "0.4.0"
description = "Parasitic network manager"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/snail"
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/snail" }

[[bin]]
name = "snaild"
path = "src/bin/snaild.rs"
doc = false
test = false

[[bin]]
name = "snailctl"
path = "src/bin/snailctl.rs"
test = false

[dependencies]
failure = "0.1.1"
hlua-badtouch = "0.4.2"
structopt = "0.2"
colored = "1.6"
dbus = "0.6.1"
log = "0.4"
env_logger = "0.6"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
kuchiki = "0.7"
regex = "1.0"
dhcp4r = "0.1.0"
rand = "0.6"
base64 = "0.10"
serde_urlencoded = "0.5.2"
reduce = "0.1.1"
users = "0.9.0"
tempfile = "3.0.2"
url = "1.7"

trust-dns-resolver = { version = "0.11", features = ["dns-over-https-rustls"] }
trust-dns-proto = { version = "0.7" }

hyper = "0.12"
http = "0.1.5"
hyper-rustls = "0.16"
rustls = "0.15"
tokio-core = "0.1.17"
futures = "0.1"
ct-logs = "0.5"
webpki = "0.19.1"
webpki-roots = "0.16"

nix = "0.14"
zmq = "0.9"
syscallz = "0.11"
caps = "0.3"

[dev-dependencies]
pseudo = "0.2.0"
boxxy = "0.10.0"
